Add links to Aug 18 minutes.

--- a/meetings/2021-08-18-minutes.md
+++ b/meetings/2021-08-18-minutes.md
@@ -10,7 +10,7 @@ Chair: Jeffrey
 
 ## Pull Requests
 
-### Define party by accountability, not ownership? #32
+### [Define party by accountability, not ownership? #32](https://github.com/w3ctag/privacy-principles/pull/32)
 
 JY: This overlaps with #26, you talked about this last week. Is there more?
 
@@ -20,7 +20,7 @@ JY: We had a question in Google about whether we should use "data controller" to
 
 CR: We spent time on terminology in general.
 
-### Identity and boundary
+### [Identity and boundary](https://github.com/w3ctag/privacy-principles/pull/28)
 
 JY: Ready to merge?
 
@@ -30,11 +30,11 @@ JY: It's talk later.
 
 RB: We should try to get to the consensus thing.
 
-### Logo discussion
+### [Logo discussion](https://github.com/w3ctag/privacy-principles/pull/20)
 
 TO: We should probably leave it unmerged for now.
 
-### Update the Status
+### [Update the Status](https://github.com/w3ctag/privacy-principles/pull/17)
 
 JY: I think this is good?
 
@@ -46,7 +46,7 @@ TO: Merged!
 
 ## Issues
 
-### Issue #35: Opt-in consent / Opt-out Global Control
+### [Issue #35: Opt-in consent / Opt-out Global Control](https://github.com/w3ctag/privacy-principles/issues/35)
 
 CR: `First sentence: Change “control” to “express a preference for what processing is done to their data”.`
 
@@ -84,7 +84,7 @@ RB: Agreed.
 
 JY: Similar to privacy goals vs how browser can enforce them.
 
-### Unwanted same-site recognition #34
+### [Unwanted same-site recognition #34](https://github.com/w3ctag/privacy-principles/issues/34)
 
 CR: The document suggests that users will be recognised but users might not expect that their whole behaviour is kept.
 
@@ -112,7 +112,7 @@ JY: I can take a stab at some of that, I'd appreciate someone else taking a stab
 
 PS: I can dot that.
 
-### "Pseudonymous" with respect to whom? #33
+### ["Pseudonymous" with respect to whom? #33](https://github.com/w3ctag/privacy-principles/issues/33)
 
 WS: While reading the doc from the perspective of somebody controlling data rather than the user, a solve might be as simple as "pseudonymous with respect to the first party"
 
@@ -122,7 +122,7 @@ JY: Pseudonymous data and pseudonymous _for a party_ (which may be the first) mi
 
 RB: Agreed, ongoing rewrite.
 
-### Privacy principles by category (high level privacy threats) #27
+### [Privacy principles by category (high level privacy threats) #27](https://github.com/w3ctag/privacy-principles/issues/27)
 
 JY: We might not have anything new?
 
@@ -130,6 +130,6 @@ CR: Section of document that pulled out privacy issues from the IETF document. I
 
 JY: SGTM. I will PR.
 
-### Definitions #26
+### [Definitions #26](https://github.com/w3ctag/privacy-principles/issues/26)
 
 RB: Nothing new since the meeting, it's all stuff I have to do.
