Improve the summary of the principles we talked about on 2022-03-02.

--- a/meetings/2022-03-02-minutes.md
+++ b/meetings/2022-03-02-minutes.md
@@ -28,22 +28,24 @@ Nick: Not ready
 ## What principles should we cover?
 
 ### Summary
-* Data minimization
+* Data minimization (collection, exposure, and retention)
   * no party should have access to a significant chunk of someone's browsing history
 * Purpose limitation
 * Informed, meaningful consent
 * User rights on un-owned devices
 * User participation: access, correction, deletion
+  * Ability to have anonymous and ephemeral interactions
 * Data security: encrypted, confidential, authenticated
 * Don't try to distinguish personal data from non-personal: it's all likely to be personal somehow
 * Identity separation
 * Accountability: compliance & visibility
-* Make identification visible
-* Automation and delegation of privacy work
+* Make identification and personalization visible
+* Automation and delegation of privacy work, including to parents/guardians
 * Being let alone: quiet, free from interruption, ending communications
 * Really Good Reason principle for exemptions
 * Privacy from whom: not just the service, but from other users, friends and family, or from governments
 * Collective privacy
+* Beneficial misrepresentations
 
 
 ### Notes
