add myself to regrets

--- a/meetings/2022-11-16-minutes.md
+++ b/meetings/2022-11-16-minutes.md
@@ -2,7 +2,7 @@
 
 Present: Nick, Dan, Don, Christine, Jeffrey, Robin
 
-Regrets: Amy, Sam, Peter, Tess
+Regrets: Amy, Sam, Peter, Tess, Wendy
 
 ## https://github.com/w3ctag/privacy-principles/pull/193
 
