Paste in the second half of the 2023-03-22 minutes.

--- a/meetings/2023-03-22-minutes.md
+++ b/meetings/2023-03-22-minutes.md
@@ -5,11 +5,11 @@ Regrets: Robin, Amy, Sam, Tess
 
 ## [Mention harm from partially blocking cross-context PR#227](https://github.com/w3ctag/privacy-principles/pull/227)
 
-Jeffrey: in response to ... by partially blocking cross-context recognition we can create pressure on industry... 
+Jeffrey: in response to ... by partially blocking cross-context recognition we can create pressure on industry...
 
 Dan: is it a principle?
 
-Jeffrey: it's talking about what UAs are supposed to to divide things up.. 
+Jeffrey: it's talking about what UAs are supposed to to divide things up..
 
 Dan: maybe it can be ?
 
@@ -31,9 +31,9 @@ Jeffrey: somewhat - but there are trade-offs with EWP and we want people to thin
 
 Nick: 2nd sentence of the document specifically says that we're not doing that. I think 2nd sentence is pretty prominent.
 
-Jeffrey: I'll bring that back to this commenter. 
+Jeffrey: I'll bring that back to this commenter.
 
-Dan: there is also [societal impacts](https://w3ctag.github.io/societal-impact-questionnaire/). Also [Security worksho](https://www.w3.org/2023/03/secure-the-web-forward/) 
+Dan: there is also [societal impacts](https://w3ctag.github.io/societal-impact-questionnaire/). Also [Security workshop](https://www.w3.org/2023/03/secure-the-web-forward/)
 
 Don: one concern of having a privacy principles doc is that often privacy harms are downstream from other problems on the web.  Cross-context sharing, e.g., are often a product of deceptive practices perpetrated against advertisers by intermediaries. Include a list of other principles documents that should exist?
 
@@ -41,26 +41,96 @@ Dan: i think we leave the issue open for now - but also don't think it deserves 
 
 ### https://github.com/w3ctag/privacy-principles/issues/229
 
-Jeffrey: opt-in-opt-out... 
+Jeffrey: opt-in-opt-out...
 
-Nick: seems Robin is saying we could ... [comment](https://github.com/w3ctag/privacy-principles/issues/229#issuecomment-1478726105) .. wouldn't it maybe be the case that we would expect consent applies to things that could be more sensitive... 
+Nick: seems Robin is saying we could ... [comment](https://github.com/w3ctag/privacy-principles/issues/229#issuecomment-1478726105) .. wouldn't it maybe be the case that we would expect consent applies to things that could be more sensitive...
 
 Jeffrey: you want people to consent to saving 5 articles... saving a list of recently read articles...  maybe that doesn't require consent?
 
 Pete: cross-context or within the same context?
 
-Jeffrey: our text doesn't say cross-context.  
+Jeffrey: our text doesn't say cross-context.
 
 Nick: i don't think it's sensitive if the web site I've visited knows what pages i visited.. but i do think it's sensitive if another web site knows what pages i've visited.
 
-Wendy: rephrase the underlying text - similar to robin's suggestion... people should be able to consent to otherwise restricted purposes... 
+Wendy: rephrase the underlying text - similar to robin's suggestion... people should be able to consent to otherwise restricted purposes...
 
 Nick: is it about purposes or consenting to otherwise restricted processing / activities?
 
 Don: we could say "more sensitive processing such as recognized cross-context" instead of "with a company" a company could be a service provider, the company that operates the site, or a problematic third party, this "company" wording is not clear
 
-Nick: we may also need to do somehting about purposes.. but we should make it clear regarding cross-context sharing.  
+Nick: we may also need to do somehting about purposes.. but we should make it clear regarding cross-context sharing.
 
 Jeffrey: i like wendy's suggestion...  I can **draft a PR.**
 
 ### https://github.com/w3ctag/privacy-principles/issues/230
+
+Jeffrey: "indicators should be vivid and in the user's face"... Focus on informed consent .. probably across the whole document.  Saying "consent should be informed" is a lot of what we're trying to say...
+
+Don: also "consent" has been used by consent management platforms, with a commercial definition that does not match up with the normal one.
+
+Nick: *highly intentional* is there as well. Seems like it's getting at that same idea.  Is the concern that the vivid indicator (e.g. geolocaiton or camera) for cookie or cross-site would be annoying?
+
+Jeffrey: michael's concern is about training users to ignore this stuff. we need to recognize UX research about training users to ignore.
+
+Nick: this is saying concent should be "rare"
+
+Don: e-privacy directive "consent" is not (usually? ever?) real consent
+
+Dan: strengthen language around consent and be clear about what we mean by consent?
+
+Wendy: there's the "vivid" get in the user's face ...
+
+Don: the twitter doc says "let the user know that this type of data sharing is happening"... Ok I know i'm dmarti on twitter so when i see that logo in my ... it's more obvious to me. Making user's aware of when this is happening is something we need to encourage even if we discourage asking for real/fake consent.
+
+Nick: not just in log-in case but in other cases... ubiquitous ... we're suggesting that it should be quite rare, not ubiquitous... It might be that michael and us disagree on how often you're going to be giving consent for cross-site tracking.
+
+Jeffrey: yes... the authors of e-privacy didn't expect cookie banners to appear everywhere. they expected it to reduce cookies.  Maybe as we improve privact in general we can tune up the warnings so they appear at a reasonable rate...
+
+Nick: i think that is what happened to the eprivacy directive .. if we all bother users then we normalize it... i don't think "data sharing is fine as long as it's ubiquitous".
+
+Jeffrey: more thinking needed.
+
+Dan: where is the UX research?
+
+Jeffrey: if
+
+Don: location tracking UX space... innovation... car sites are a good example.  used to be you would get a location tracking prompt right away. now they will wait until you're digging deeper before prompting location...
+
+Dan: that's good to se... In general I'd like to see mor einfo about how more innovative mechanisms of consent requests are ... I'd like to see some of this conversation motivated by what cookie banners (and other mechanimss of consent) are doing now - rather than 5 years ago.  [gives american express example]
+
+Pete: also some browsers automatically dismiss cookie banners...
+
+### https://github.com/w3ctag/privacy-principles/issues/231
+
+Jeffrey: this one ... we have text saying "when you set your bwosers to send a GPC signal it sends it on every request" which overrides some web-site specific language... which i don't think is right.  Even the GPC spec doesn't make this claim any more.
+
+Pete: if we're saying the user has given a broad preferene ... and sites can overr-ride it then that could make all sites request it...
+
+Jeffrey: we are saying it should be rare.
+
+Pete: we don't have a mechanism for this...
+
+Pete: I like it in the abstract but...
+
+Dan: GPC site by site?
+
+Nick: there was a proposal in DNT for an API but didn't go anywhere...
+
+Jeffrey: i can **send a PR** and we can see how the review goes.
+
+### https://github.com/w3ctag/privacy-principles/issues/232
+
+Jeffrey: it looks like we're speculating that GPC would have these implications under GDPR and we should probably not do that...
+
+Don: treat as if their cookie dialog had come up and they had clicked reject all... ideally you should do that... would remove unnecessary consent.
+
+Jeffrey: agree - to say that we don't need to talk about GDPR... or we could remove the reference to GPC...
+
+Jeffrey: I'll send a PR to remove the parenthetical....
+
+Dan: i like what don said...
+
+Jeffrey: not comfortable writing the version that cites the CCPA instead of the GDPR.
+
+Don: **Will write.**
