--- a/meetings/2023-09-06-minutes.md
+++ b/meetings/2023-09-06-minutes.md
@@ -81,7 +81,7 @@ Robin: I agree that the definition in the consent section could be worked on. I 
 
 Jeffrey: that works for me
 
-Robin: [makes issue]()
+Robin: [makes issue](https://github.com/w3ctag/privacy-principles/issues/346)
 
 [discussion of editorial changes]
 
