--- a/meetings/2023-09-06-minutes.md
+++ b/meetings/2023-09-06-minutes.md
@@ -100,7 +100,7 @@ Robin: FIPS are the state of the art outside of computer research labs, and they
 
 Jeffrey: suggest keeping a lot of the discussion and make it an example. But don't want to block this PR on that discussion
 
-Robin: I've created issue #347 to compress the discussion
+Robin: I've created [issue #347](https://github.com/w3ctag/privacy-principles/issues/347) to compress the discussion
 
 Nick: I think the FIPS are fine, the text should say implementation is bad...
 
